--- a/view/contestDetailsPage/contestDetailsPage.css
+++ b/view/contestDetailsPage/contestDetailsPage.css
@@ -1,10 +1,14 @@
 
+body{
+    background-image: url('../files/designImg/plbg.jpeg');
+    background-position: center;
+    background-size: fill;
+}
 #mLogo{
     margin-left: 10px;
     height: 30px;
     width: 10%;
 }
-
 
 #navVr{
     border-left: 2px solid black; 
@@ -22,13 +26,7 @@
 #nav-text{
     color: #0B6477;
 }
-#contestTitle{
+#seNav{
     background-color: #0B6477;
-    padding: 5px;
-    color:white;
-}
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-    padding: 10px;
+    width: 100%;
 }
