--- a/view/contestPage/cPage.css
+++ b/view/contestPage/cPage.css
@@ -43,7 +43,7 @@ table, th, td {
 #carD{
     height: 150px;
     width: 250px;
-    border-radius: 10px;
+    border-radius: 50%;
     margin: 20px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -92,3 +92,5 @@ button{
     border-radius: 10px;
     border: 1px solid white;
 }
+
+
