--- a/view/userDashboard/dashboard.css
+++ b/view/userDashboard/dashboard.css
@@ -89,3 +89,11 @@ img{
 .cngPhoto:first-child{
     margin-left: 30px;
 }
+#status{
+    cursor: pointer;
+    background-color: #0B6477;
+}
+#seNav{
+    width: 100%;
+    background-color: #0B6477;
+}
